// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`command git with git "commit" hook it should work with hooks: child-process 1`] = `
Object {
  "args": Array [
    "run",
    "precarna:git",
  ],
  "command": "npm",
  "cwd": "/path/to/project",
}
`;

exports[`command git with git "commit" hook it should work with hooks: child-process 2`] = `
Object {
  "args": Array [
    "diff",
    "--staged",
    "--name-only",
  ],
  "command": "git",
  "cwd": "/path/to/project",
}
`;

exports[`command git with git "commit" hook it should work with hooks: child-process 3`] = `
Object {
  "args": Array [
    "ls-files",
    "--exclude-standard",
    "--modified",
    "--others",
  ],
  "command": "git",
  "cwd": "/path/to/project",
}
`;

exports[`command git with git "commit" hook it should work with hooks: child-process 4`] = `
Object {
  "args": Array [
    "run",
    "precarna:analyse",
  ],
  "command": "npm",
  "cwd": "/path/to/project",
}
`;

exports[`command git with git "commit" hook it should work with hooks: child-process 5`] = `
Object {
  "args": Array [
    "--config",
    "/path/to/project/node_modules/carna/configs/prettierrc.json",
    "--write",
    "/path/to/project/src/index.ts",
    "/path/to/project/src/lib/app.ts",
  ],
  "command": "./node_modules/.bin/prettier",
  "cwd": "/path/to/project",
}
`;

exports[`command git with git "commit" hook it should work with hooks: child-process 6`] = `
Object {
  "args": Array [
    "--color",
    "--max-warnings",
    "0",
    "--config",
    "/path/to/project/node_modules/carna/configs/eslintrc.json",
    "--fix",
    "/path/to/project/src/index.ts",
    "/path/to/project/src/lib/app.ts",
  ],
  "command": "./node_modules/.bin/eslint",
  "cwd": "/path/to/project",
}
`;

exports[`command git with git "commit" hook it should work with hooks: child-process 7`] = `
Object {
  "args": Array [
    "--outDir",
    "/path/to/project/build",
    "--project",
    "/path/to/project/tsconfig.json",
    "--noEmit",
    "--isolatedModules",
    "false",
  ],
  "command": "./node_modules/.bin/tsc",
  "cwd": "/path/to/project",
}
`;

exports[`command git with git "commit" hook it should work with hooks: child-process 8`] = `
Object {
  "args": Array [
    "run",
    "postcarna:analyse",
  ],
  "command": "npm",
  "cwd": "/path/to/project",
}
`;

exports[`command git with git "commit" hook it should work with hooks: child-process 9`] = `
Object {
  "args": Array [
    "add",
    "\\"/path/to/project/src/index.ts\\"",
    "\\"/path/to/project/src/lib/app.ts\\"",
  ],
  "command": "git",
  "cwd": "/path/to/project",
}
`;

exports[`command git with git "commit" hook it should work with hooks: child-process 10`] = `
Object {
  "args": Array [
    "run",
    "precarna:test",
  ],
  "command": "npm",
  "cwd": "/path/to/project",
}
`;

exports[`command git with git "commit" hook it should work with hooks: child-process 11`] = `
Object {
  "args": Array [
    "--colors",
    "--config",
    "/path/to/project/jest.config.js",
    "--selectProjects",
    "unit",
    "--runInBand",
    "--ci",
    "--silent",
    "--json",
    "--outputFile",
    "/path/to/project/coverage/_unit/jest-final.json",
    "--coverage",
    "--coverageDirectory",
    "/path/to/project/coverage/_unit",
    "--coverageReporters",
    "json",
    "--coverageThreshold",
    "'{\\"global\\":{\\"statements\\":0,\\"branches\\":0,\\"functions\\":0,\\"lines\\":0}}'",
  ],
  "command": "./node_modules/.bin/jest",
  "cwd": "/path/to/project",
}
`;

exports[`command git with git "commit" hook it should work with hooks: child-process 12`] = `
Object {
  "args": Array [
    "--colors",
    "--config",
    "/path/to/project/jest.config.js",
    "--selectProjects",
    "e2e",
    "--runInBand",
    "--ci",
    "--silent",
    "--json",
    "--outputFile",
    "/path/to/project/coverage/_e2e/jest-final.json",
    "--coverage",
    "--coverageDirectory",
    "/path/to/project/coverage/_e2e",
    "--coverageReporters",
    "json",
    "--coverageThreshold",
    "'{\\"global\\":{\\"statements\\":0,\\"branches\\":0,\\"functions\\":0,\\"lines\\":0}}'",
  ],
  "command": "./node_modules/.bin/jest",
  "cwd": "/path/to/project",
}
`;

exports[`command git with git "commit" hook it should work with hooks: child-process 13`] = `
Object {
  "args": Array [
    "run",
    "postcarna:test",
  ],
  "command": "npm",
  "cwd": "/path/to/project",
}
`;

exports[`command git with git "commit" hook it should work with hooks: child-process 14`] = `
Object {
  "args": Array [
    "run",
    "postcarna:git",
  ],
  "command": "npm",
  "cwd": "/path/to/project",
}
`;

exports[`command git with git "commit" hook it should work with hooks: fs 1`] = `
Object {
  "data": "{\\"/path/to/project/src/index.ts\\":{\\"path\\":\\"/path/to/project/src/index.ts\\",\\"statementMap\\":{\\"0\\":{\\"start\\":{\\"line\\":4,\\"column\\":41},\\"end\\":{\\"line\\":15,\\"column\\":1}}},\\"fnMap\\":{},\\"branchMap\\":{},\\"s\\":{\\"0\\":1},\\"f\\":{},\\"b\\":{}},\\"/path/to/project/src/lib/app.ts\\":{\\"path\\":\\"/path/to/project/src/lib/app.ts\\",\\"statementMap\\":{\\"0\\":{\\"start\\":{\\"line\\":10,\\"column\\":12},\\"end\\":{\\"line\\":10,\\"column\\":52}}},\\"fnMap\\":{\\"0\\":{\\"name\\":\\"(anonymous_0)\\",\\"decl\\":{\\"start\\":{\\"line\\":19,\\"column\\":12},\\"end\\":{\\"line\\":19,\\"column\\":13}},\\"loc\\":{\\"start\\":{\\"line\\":19,\\"column\\":53},\\"end\\":{\\"line\\":42,\\"column\\":1}},\\"line\\":19}},\\"branchMap\\":{},\\"s\\":{\\"0\\":1,\\"1\\":1,\\"2\\":1,\\"3\\":1,\\"4\\":1,\\"5\\":1,\\"6\\":1},\\"f\\":{\\"0\\":1,\\"1\\":1},\\"b\\":{}}}
",
  "path": "/path/to/project/coverage/coverage-final.json",
}
`;

exports[`command git with git "commit" hook it should work with hooks: istanbul-reports 1`] = `
Array [
  "lcovonly",
  Object {},
]
`;

exports[`command git with git "commit" hook it should work with hooks: istanbul-reports 2`] = `
Array [
  "json-summary",
  Object {},
]
`;

exports[`command git with git "commit" hook it should work with hooks: istanbul-reports 3`] = `
Array [
  "text-summary",
  Object {},
]
`;

exports[`command git with git "commit" hook it should work: child-process 1`] = `
Object {
  "args": Array [
    "diff",
    "--staged",
    "--name-only",
  ],
  "command": "git",
  "cwd": "/path/to/project",
}
`;

exports[`command git with git "commit" hook it should work: child-process 2`] = `
Object {
  "args": Array [
    "ls-files",
    "--exclude-standard",
    "--modified",
    "--others",
  ],
  "command": "git",
  "cwd": "/path/to/project",
}
`;

exports[`command git with git "commit" hook it should work: child-process 3`] = `
Object {
  "args": Array [
    "--config",
    "/path/to/project/node_modules/carna/configs/prettierrc.json",
    "--write",
    "/path/to/project/src/index.ts",
    "/path/to/project/src/lib/app.ts",
  ],
  "command": "./node_modules/.bin/prettier",
  "cwd": "/path/to/project",
}
`;

exports[`command git with git "commit" hook it should work: child-process 4`] = `
Object {
  "args": Array [
    "--color",
    "--max-warnings",
    "0",
    "--config",
    "/path/to/project/node_modules/carna/configs/eslintrc.json",
    "--fix",
    "/path/to/project/src/index.ts",
    "/path/to/project/src/lib/app.ts",
  ],
  "command": "./node_modules/.bin/eslint",
  "cwd": "/path/to/project",
}
`;

exports[`command git with git "commit" hook it should work: child-process 5`] = `
Object {
  "args": Array [
    "--outDir",
    "/path/to/project/build",
    "--project",
    "/path/to/project/tsconfig.json",
    "--noEmit",
    "--isolatedModules",
    "false",
  ],
  "command": "./node_modules/.bin/tsc",
  "cwd": "/path/to/project",
}
`;

exports[`command git with git "commit" hook it should work: child-process 6`] = `
Object {
  "args": Array [
    "add",
    "\\"/path/to/project/src/index.ts\\"",
    "\\"/path/to/project/src/lib/app.ts\\"",
  ],
  "command": "git",
  "cwd": "/path/to/project",
}
`;

exports[`command git with git "commit" hook it should work: child-process 7`] = `
Object {
  "args": Array [
    "--colors",
    "--config",
    "/path/to/project/jest.config.js",
    "--selectProjects",
    "unit",
    "--runInBand",
    "--ci",
    "--silent",
    "--json",
    "--outputFile",
    "/path/to/project/coverage/_unit/jest-final.json",
    "--coverage",
    "--coverageDirectory",
    "/path/to/project/coverage/_unit",
    "--coverageReporters",
    "json",
    "--coverageThreshold",
    "'{\\"global\\":{\\"statements\\":0,\\"branches\\":0,\\"functions\\":0,\\"lines\\":0}}'",
  ],
  "command": "./node_modules/.bin/jest",
  "cwd": "/path/to/project",
}
`;

exports[`command git with git "commit" hook it should work: child-process 8`] = `
Object {
  "args": Array [
    "--colors",
    "--config",
    "/path/to/project/jest.config.js",
    "--selectProjects",
    "e2e",
    "--runInBand",
    "--ci",
    "--silent",
    "--json",
    "--outputFile",
    "/path/to/project/coverage/_e2e/jest-final.json",
    "--coverage",
    "--coverageDirectory",
    "/path/to/project/coverage/_e2e",
    "--coverageReporters",
    "json",
    "--coverageThreshold",
    "'{\\"global\\":{\\"statements\\":0,\\"branches\\":0,\\"functions\\":0,\\"lines\\":0}}'",
  ],
  "command": "./node_modules/.bin/jest",
  "cwd": "/path/to/project",
}
`;

exports[`command git with git "commit" hook it should work: fs 1`] = `
Object {
  "data": "{\\"/path/to/project/src/index.ts\\":{\\"path\\":\\"/path/to/project/src/index.ts\\",\\"statementMap\\":{\\"0\\":{\\"start\\":{\\"line\\":4,\\"column\\":41},\\"end\\":{\\"line\\":15,\\"column\\":1}}},\\"fnMap\\":{},\\"branchMap\\":{},\\"s\\":{\\"0\\":1},\\"f\\":{},\\"b\\":{}},\\"/path/to/project/src/lib/app.ts\\":{\\"path\\":\\"/path/to/project/src/lib/app.ts\\",\\"statementMap\\":{\\"0\\":{\\"start\\":{\\"line\\":10,\\"column\\":12},\\"end\\":{\\"line\\":10,\\"column\\":52}}},\\"fnMap\\":{\\"0\\":{\\"name\\":\\"(anonymous_0)\\",\\"decl\\":{\\"start\\":{\\"line\\":19,\\"column\\":12},\\"end\\":{\\"line\\":19,\\"column\\":13}},\\"loc\\":{\\"start\\":{\\"line\\":19,\\"column\\":53},\\"end\\":{\\"line\\":42,\\"column\\":1}},\\"line\\":19}},\\"branchMap\\":{},\\"s\\":{\\"0\\":1,\\"1\\":1,\\"2\\":1,\\"3\\":1,\\"4\\":1,\\"5\\":1,\\"6\\":1},\\"f\\":{\\"0\\":1,\\"1\\":1},\\"b\\":{}}}
",
  "path": "/path/to/project/coverage/coverage-final.json",
}
`;

exports[`command git with git "commit" hook it should work: istanbul-reports 1`] = `
Array [
  "lcovonly",
  Object {},
]
`;

exports[`command git with git "commit" hook it should work: istanbul-reports 2`] = `
Array [
  "json-summary",
  Object {},
]
`;

exports[`command git with git "commit" hook it should work: istanbul-reports 3`] = `
Array [
  "text-summary",
  Object {},
]
`;
